fixed filter button spacing and background check button

--- a/src/dashboard/FilterButton/FilterButton.css
+++ b/src/dashboard/FilterButton/FilterButton.css
@@ -19,7 +19,7 @@
 }
 
 .filter-text {
-  margin-left: 32px;
+  margin-left: 20px;
   margin-top: 0px;
   font-weight: 400;
   font-size: 1.5rem;
@@ -42,9 +42,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  margin-left: 32px;
-  margin-top: 20px;
-  margin-bottom: 10px;
+  margin: 20px 20px 10px 20px;
 }
 .filter-head > h1 {
   margin: 0px;
