--- a/src/profile/BackgroundCheck/BackgroundCheck.css
+++ b/src/profile/BackgroundCheck/BackgroundCheck.css
@@ -26,20 +26,11 @@
   font-weight: bold;
 }
 
-.bg-check-results-header > div > input {
-  width: 80px;
-  height: 30px;
-  margin-right: 20px;
-
-  font-size: 16px;
-}
-
 .bg-check-results-header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
   padding: 0px 10px;
 }
 
